add_executable(sprite_bounce main.c)
target_compile_options(sprite_bounce PRIVATE -Wall)
target_compile_definitions(sprite_bounce PRIVATE DVI_DEFAULT_SERIAL_CONFIG=${DVI_DEFAULT_SERIAL_CONFIG})
target_link_libraries(sprite_bounce pico_stdlib pico_multicore pico_util libdvi libsprite)
pico_add_extra_outputs(sprite_bounce)
